fixed gap between grid

--- a/mid-exams/style.css
+++ b/mid-exams/style.css
@@ -257,6 +257,8 @@
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             grid-template-rows: repeat(2, 1fr);
+            gap: 69px;
+
         }
 
         .box {
@@ -369,6 +371,7 @@
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             grid-template-rows: 1fr;
+            gap: 30px;
         }
 
         .box {
